--- a/src/CardDetailsForm.css
+++ b/src/CardDetailsForm.css
@@ -12,35 +12,35 @@
 }
 
 .card-details-form label {
-  font-weight:500;
+  font-weight: 500;
   font-size: 14px;
 }
 
 .card-details-form input {
   width: 300px;
-  font-family: 'Roboto Mono', monospace;
+  font-family: "Roboto Mono", monospace;
   border-radius: 5px;
   border: 1px solid #cccccc;
   height: 30px;
   margin-top: 10px;
 }
 
-.card-details-form .expiryDateClass{
+.card-details-form .expiryDateClass {
   width: 50px;
 }
-#expiryDate{
+#expiryDate {
   margin-right: 10px;
 }
-#exp_cvc{
+#exp_cvc {
   display: flex;
 }
-#id_cvc{
+#id_cvc {
   margin-left: 20px;
 }
-#cvc{
+#cvc {
   width: 158px;
 }
-#submit_button{
+#submit_button {
   margin-top: 15px;
   width: 307px;
   height: 30px;
@@ -54,4 +54,73 @@
   color: red;
   font-size: 12px;
   margin-top: 5px;
+}
+
+.credit-card {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  /* background-color: #f5f5f5; */
+  padding: 20px;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+
+.card-details {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.card-number {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.expiry-date {
+  font-size: 14px;
+}
+
+.card-holder {
+  font-size: 14px;
+}
+
+.cvc {
+  font-size: 14px;
+  font-weight: bold;
+  align-self: flex-end;
+}
+
+#flex_mon_year{
+  display: flex;
+}
+
+#div_year{
+  margin-left: 10px;
+}
+
+.container{
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  flex-direction: row-reverse;
+}
+
+#wrap_left {
+  position: relative;
+}
+
+#back_color {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(174, 126, 126);
+  opacity: 0.5;
+}
+
+#left_container {
+  position: relative;
+  z-index: 1;
 }
